--- a/style.css
+++ b/style.css
@@ -1,28 +1,54 @@
-a[href^="https://www.google.com"] {
-  color: green;
+html *
+{
+   font-size: 1em !important;
+   color: #000 !important;
+   font-family: Arial !important;
+}
+h2{
+  margin-left: 640px;
+}
+.container {
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 0 1rem;
+}
+.responsive-image {
+  max-width: 100%;
+  background-color:#6495ED;
+}
+.cell img {
+  display: block;
+}
+@media screen and (min-width: 600px) {
+  .grid {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+  .cell {
+    width: 50%;
+  }
+}
+figure{
+  border:solid #F0F8FF;
+  border-radius: 25px;
+}
+@media screen and (min-width: 1000px) {
+  .cell {
+    width: calc(100% / 3);
+  }
+}
+.cell {
+  margin: 1rem;
+}
+@media screen and (min-width: 600px) {
+  .cell {
+    width: calc(50% - 2rem);
+  }
 }
 
-a[href*="link-group"] {
-  color: red;
-}
-
-#first-div p:nth-child(2)::after {
-  content: " - NEW";
-  color: yellow;
-}
-
-#first-div p:nth-child(3)::after {
-  content: " - NEW";
-  color: yellow;
-}
-#second-div p:nth-child(odd) {
-  color: blue;
-}
-
-#second-div p:nth-child(even) {
-  color: red;
-}
-
-body p:nth-child(8):hover{
-  font-style: italic;
+@media screen and (min-width: 1000px) {
+  .cell {
+    width: calc(33.3333% - 2rem);
+  }
 }
